--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: php
 
 php:
-  - hhvm
-  - 5.5
-  - 5.4
-  - 5.3
+    - hhvm
+    - 5.6
+    - 5.5
+    - 5.4
 
-before_script:
-  - composer install
+install:
+    - composer install --dev
 
 script:
-  - phpunit
+    - phpunit
