--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     },
     "require": {
-        "php": ">=5.3.0",
-        "ledgr/checkdigit": "1.*"
+        "php": ">=5.4",
+        "ledgr/checkdigit": "1.*",
+        "ledgr/id": ">=2.0.1,<3.0"
     }
 }
