--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
         }
     },
     "autoload-dev": {
-        "classmap": [
-            "tests/"
-        ]
+        "psr-4": {
+            "byrokrat\\banking\\": "tests/"
+        }
     },
     "require": {
         "php": ">=5.4",
