--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
 script:
   - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then phpunit --coverage-clover=coverage.clover ; fi
   - if [[ "$TRAVIS_PHP_VERSION" != '5.6' ]]; then phpunit ; fi
+  - vendor/bin/jsonlint src/data/keys.json
+  - vendor/bin/jsonlint src/data/parsers.json
 
 after_script:
   - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then wget https://scrutinizer-ci.com/ocular.phar ; fi
