--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
         "php": ">=5.4",
         "byrokrat/checkdigit": "~1.0",
         "byrokrat/id": "~1.0"
+    },
+    "require-dev": {
+        "seld/jsonlint": "~1.0"
     }
 }
