--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ php:
   - 5.4
 
 install:
-    - composer install --dev --prefer-source
+  - composer require hanneskod/readme-tester:dev-master
 
 script:
   - if [[ "$TRAVIS_PHP_VERSION" == '5.6' ]]; then phpunit --coverage-clover=coverage.clover ; fi
