--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ php:
 
 install:
   - if [[ "$TRAVIS_PHP_VERSION" == '5.5' ]]; then composer install ; fi
-  - if [[ "$TRAVIS_PHP_VERSION" != '5.5' ]]; then composer require hanneskod/readme-tester:dev-master ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != '5.5' ]]; then composer require hanneskod/readme-tester:^1.0@beta ; fi
 
 script:
   - if [[ "$TRAVIS_PHP_VERSION" == '7.0' ]]; then phpunit --coverage-clover=coverage.clover ; fi
