--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,9 @@
             "byrokrat\\banking\\": "tests/"
         }
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.0"
+    },
     "require": {
         "php": ">=5.5",
         "byrokrat/checkdigit": "~1.0",
