--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ install:
   - if [[ "$TRAVIS_PHP_VERSION" != '5.5' ]]; then composer require hanneskod/readme-tester:^1.0@beta ; fi
 
 script:
-  - if [[ "$TRAVIS_PHP_VERSION" == '7.0' ]]; then phpunit --coverage-clover=coverage.clover ; fi
-  - if [[ "$TRAVIS_PHP_VERSION" != '7.0' ]]; then phpunit ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == '7.0' ]]; then vendor/bin/phpunit --coverage-clover=coverage.clover ; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != '7.0' ]]; then vendor/bin/phpunit ; fi
 
 after_script:
   - if [[ "$TRAVIS_PHP_VERSION" == '7.0' ]]; then wget https://scrutinizer-ci.com/ocular.phar ; fi
