--- a/.gitattributes
+++ b/.gitattributes
@@ -1,10 +1,9 @@
+/dev export-ignore
 /tests export-ignore
-/docs export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
-/CHANGES.md export-ignore
-/CONTRIBUTING.md export-ignore
+/bob_config.php export-ignore
+/CHANGELOG.md export-ignore
+/phpunit.xml export-ignore
 /README.md export-ignore
-/TODO.md export-ignore
-/phpunit.xml.dist export-ignore
