--- a/.gitattributes
+++ b/.gitattributes
@@ -3,7 +3,8 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
-/bob_config.php export-ignore
 /CHANGELOG.md export-ignore
+/Makefile export-ignore
+/phpstan.neon export-ignore
 /phpunit.xml export-ignore
 /README.md export-ignore
