--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,10 @@
         }
     },
     "require": {
-        "php": ">=7.2"
+        "php": ">=7.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "phpspec/prophecy-phpunit": "^2"
     }
 }
