--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 /.phive export-ignore
 /dev export-ignore
 /tests export-ignore
+/res export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
