--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         }
     },
     "require": {
-        "php": ">=7.3"
+        "php": "^7.3 || ^8.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9",
